# rustapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/rustapi/: Cargo.toml
crates/rustapi-core/: Cargo.toml
crates/rustapi-core/src/: lib.rs  router.rs  server.rs
crates/rustapi-macros/: Cargo.toml
crates/rustapi-macros/src/: route.rs
crates/rusty-resty-macros/: Cargo.toml
crates/rusty-resty-macros/src/: lib.rs
examples/: hello_world.rs  with_macros.rs
examples/basic-api/: Cargo.toml
src/: lib.rs  main.rs
src/controllers/: echo_controller.rs  health_controller.rs
