[package]
name = "rustapi-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for rustapi framework"
readme = "../../README.md"
homepage = "https://github.com/jrkosinski/rustapi"
repository = "https://github.com/jrkosinski/rustapi"
keywords = ["api", "rest", "web", "macros"]
categories = ["web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
