[package]
name = "rustapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FastAPI-inspired REST framework for Rust with automatic OpenAPI, validation, and DI"
readme = "../../README.md"
homepage = "https://github.com/jrkosinski/rustapi"
repository = "https://github.com/jrkosinski/rustapi"
keywords = ["api", "rest", "web", "framework", "fastapi"]
categories = ["web-programming::http-server"]

[dependencies]
# Internal dependencies
rustapi-macros = { path = "../rustapi-macros", version = "0.0.1" }

# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
