[package]
name = "rusty-resty-macros"
version = "0.1.0"
edition = "2021"
authors = []
description = "Procedural macros for rusty-resty framework"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
